pipelines/manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: superservice  
  labels:
    app: superservice
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: superservice
  template:
    metadata:
      labels:
        app: superservice
    spec:
      containers:
      - name: superserviceacr
        image: superservice:latest
        port: 80
        imagePullSecrets:
        - name: superserviceacr-secret
        resources:
          requests: 
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
      securityContext:
        runAsNonRoot: true
        readOnlyRootFilesystem: false
----
apiVersion: v1
kind: Service
metadata:
  name: superservice-service
spec:
  selector:
    app: superservice
  type: ClusterIP
