pipelines/nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress-controller
  template:
    metadata:
      labels:
        app: nginx-ingress-controller
    spec:
      containers:
      - name: nginx-ingress-controller
        image: nginx/ingress-nginx:latest
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - name: ingress-nginx-config
          mountPath: /etc/nginx/nginx.conf
          readOnly: true
      volumes:
      - name: ingress-nginx-config
        configMap:
          name: ingress-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  selector:
    app: nginx-ingress-controller
  ports:
  - port: 80
    targetPort: 80
  - port: 443
    targetPort: 443
