pipelines/superservice-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  rules:
  - host: superservice.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: superservice
            port: 80
